# Layout

./: .gitignore  .spi.yml  .swiftlint-rules.yml  .swiftlint.yml  AnchorAttributeTests.swift  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Layout.podspec  Layout.xctestplan  Makefile  Package.resolved  Package.swift  Package@swift-5.10.swift  Package@swift-5.9.swift  README.md  WORKSPACE.bazel  cheatsheet.html  docs.html  validate-snapshots-excluded
.github/: CODEOWNERS
.github/workflows/: artifactory.yml  bazel.yml  cocoapods.yml  docc.yml  pages.yml  superfluous-snapshots.yml  swift.yml
Plugins/SwiftLintCommand/: SwiftLintCommand.swift
Plugins/SwiftLintPlugin/: SwiftLintPlugin.swift
Sources/Layout/: AnchorAttribute.swift  Array.swift  CanonicalEdge.swift  Collection.swift  ConstraintRelation.swift  ConstraintsBuilder.swift  DirectionalEdge.swift  HorizontalDirection.swift  IntrinsicSizingView.swift  Layout+UIView.swift  Layout+UIViewController.swift  Layout.swift  LayoutAnchoring.swift  LayoutBaseline.swift  LayoutBoundary.swift  LayoutBuilder.swift  LayoutCenter.swift  LayoutConstraint.swift  LayoutItem.swift  LayoutPriority.swift  LayoutSize.swift  NSDirectionalEdgeInsets.swift  NSLayoutConstraint+Layout.swift  NSLayoutConstraint-Axis.swift  NSLayoutConstraint.swift  NSLayoutDimension.swift  Typealiases.swift  UIEdgeInsets.swift  UILayoutGuide.swift  UILayoutPriority.swift  UILayoutSupport.swift  UIView+Autolayout.swift  UIView+Frames.swift  UIView+Layout.swift  UIView+LayoutAnchor.swift  UIView+LayoutItem.swift  (+9 more)
Tests/: .swiftlint.yml
(+923 files in other folders)
